# iotools

./: Makefile  pyproject.toml  readme.org
iotools/: __init__.py  buffer.hy  stream.hy  struct.hy  util.hy
iotools/proto/: base.hy  http.hy  socks5.hy  ssl.hy  ws.hy
iotools_proto/: base.hy  ssl.hy
tests/: __init__.py  test_buffer.hy  test_proto.hy  test_struct.hy
