[tool.poetry]
name = "iotools-hy"
version = "0.1.0"
description = "IO tools for Hy"
authors = ["vhqr0 <zq_cmd@163.com>"]
readme = "readme.org"
packages = [{ include = "iotools" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
hy = "^0.28.0"
dash-hy = "^0.1.0"

[tool.poetry.group.test.dependencies]
aiohttp = "^3.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
